--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -205,34 +205,47 @@ sidebar:
 # ---------------------------------------------------------------
 
 # Automatically scroll page to section which is under <!-- more --> mark.
-scroll_to_more: true
+# 自动将页面滚动到<!-- more -->标记下的地方。
+scroll_to_more: false
 
 # Automatically saving scroll position on each post/page in cookies.
+# 自动保存每篇文章或页面上一次滚动的地方。
 save_scroll: false
 
 # Automatically excerpt description in homepage as preamble text.
+# 自动在首页对文章进行摘要描述作为前言文本。
 excerpt_description: true
 
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
+  enable: true
   length: 150
 
 # Post meta display settings
+# 文章元数据展示设置
 post_meta:
+  # 文本显示
   item_text: true
+  # 创建时间
   created_at: true
+  # 更新时间
   updated_at: false
+  # 目录分类
   categories: true
 
 # Post wordcount display settings
 # Dependencies: https://github.com/willin/hexo-wordcount
 post_wordcount:
+  # 文本显示
   item_text: true
-  wordcount: false
-  min2read: false
-  totalcount: false
+  # 文章字数统计
+  wordcount: true
+  # 阅读时长
+  min2read: true
+  # 站点总字数统计
+  totalcount: true
+  # 该post_wordcount的所有设置另起一行显示
   separated_meta: true
 
 # Wechat Subscriber
